collapse menu working. Todo scroll fix

--- a/src/header.css
+++ b/src/header.css
@@ -37,10 +37,6 @@
     font-size: 100%;
 }
 @media only screen and (max-width: 800px) {
-    .header-bg{
-        position: relative;
-        top:30vh;
-    }
     .header-name{
         color: white;
         font-size:2vw;
@@ -58,7 +54,8 @@
     }
     .search-box input{
         height: 50px;
-        width: 100%;
+        width: 98.5%;
+        margin-bottom: 5px;
         font-size: 150%;
     }
     .search-box button{
