--- a/src/navbar.css
+++ b/src/navbar.css
@@ -13,96 +13,92 @@
     align-items: center;
 }
 .name-logo img{
-    width: 100px;
-    height:100px;
+    width: 80px;
+    height:80px;
     border-radius: 50px;
-    margin-right: 20px;
+    margin: 20px;
+}
+.menu-collapse-button{
+    display: none;
+}
+.menu-buttons{
+    margin: auto;
+    width: 15vw;
+    text-align: center;
+}
+.menu-items-collapsed{
+    display: flex;
+    flex-direction: row;
 }
 .menu-items{
     display: flex;
     margin-right: 50px;
     cursor: pointer;
 }
-.menu-items-active{
-    display: none;
-}
 .menu-items p{
     font-size: 20px;
 }
-.menu-buttons{
+.menu-items button{
+    width: 120px;
+    height: 50px;
     margin: auto;
-    width: 150px;
-    text-align: center;
+    font-size: 18px;
 }
 .menu-items :hover{
     transition: 0.4s ease;
     background-color: darkgray;
 }
-.menu-items button{
+.menu-items-collapsed button{
     width: 100px;
     height: 40px;
     margin: auto;
 }
-.hamburger{
-    display: none;
-    /* width: 3rem;
-    height: 0.2rem;
-    margin: 0.4rem;
-    background: darkgray; */
-}
-.bar{
-    display: block;
-    width: 25px;
-    height: 3px;
-    margin: 5px auto;
-    -webkit-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
-    background-color: white;
-}
+
 @media only screen and (max-width: 786px) {
+    .navbar-menu{
+        display: flex;
+        flex-direction: column;
+    }
     .name-menu-button{
         display: flex;
         justify-content: space-between;
+        align-items: center;
     }
     .menu-items{
         display: none;
     }
-    .menu-items-active{
+    .menu-collapse-button{
         display: flex;
-        position: fixed;
-        flex-direction: column;
-        top:1vh;
-        right: 0;
-        width: 25%;
-        height: 30vh;
+        font-size: 50px;
+        justify-content: flex-end;
+        margin-right: 20px;
     }
     .menu-buttons{
         display: flex;
         justify-content: center;
     }
-    .navbar-menu{
+    .menu-items-collapsed{
         display: flex;
         flex-direction: column;
+        width: 75%;
+        position: fixed;
+        right: 5px;
+        top: 8vh;
+        height: 30vh;
+        color: white;
+        background-color: black;
+        font-size: 30px;
     }
-
-    .hamburger{
-        display: flex;
-        justify-content: flex-end;
-        align-items: center;
-        background-color: transparent;
-        border: 0;
-        color: black;
-        cursor: pointer;
-        font-size: 40px;
-        padding-right: 10px;
+    .menu-items-collapsed button{
+        width: 100%;
+        height: 30vh;
+        font-size: 30px;
+        margin: 0px;
     }
-    /* .hamburger.active .bar:nth-child(2){
-        opacity: 0;
+    .menu-buttons:hover{
+        color: gray;
     }
-    .hamburger.active .bar:nth-child(1){
-        transform: translateY(8px) rotate(45deg) ;
-    }
-    .hamburger.active .bar:nth-child(3){
-        transform: translateY(-8px) rotate(-45deg) ;
-    } */
 }
+
+
+/* TODO: turnoff scroll */
